--- a/css/style.css
+++ b/css/style.css
@@ -37,9 +37,18 @@ header {
 
 .option_2 {
     color: black;
-    
-    
 }
+
+.image {
+    width: 100%;
+    height: 50px;
+}
+
+.t_right {
+    width: 100%;
+    text-align: center;
+}
+
 /* fine debug */
 
 header {
@@ -89,6 +98,21 @@ main {
     border-radius: 10px;
 }
 
+.testimonials {
+    width: 100%;
+}
+
+.desc_t {
+    text-align: center;
+    width: 100%;
+}
+
+.t_list {
+    background-color: var(--option-color);
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
 @media screen and (min-width: 768px) {
     .container {
         max-width: 730px;
@@ -103,6 +127,16 @@ main {
     }
     .utility:first-child {
         width: calc((100% /3) * 2 - 0.75rem);
+    }
+    .t_list {
+        display: flex;
+        width: 100%;
+    }
+    .image {
+        width: 20%;
+    }
+    .t_list {
+        width: 80%;
     }
 }
 
