--- a/css/style.css
+++ b/css/style.css
@@ -13,11 +13,12 @@ body {
     --utility-color: #b6dcfd;
     --option-color: #7b72b2;
     --footer-color: #363636;
+    --grey-color: #5b6e7d;
 }
 
 /* debug */
 header {
-    height: 70px;
+    
 }
 
 
@@ -26,10 +27,7 @@ header {
     height: 100%;
 }
 
-.utility {
-    height: 100px;
-    padding: 10px;
-}
+
 
 .option_1 {
     
@@ -40,10 +38,7 @@ header {
     color: black;
 }
 
-.image {
-    width: 100%;
-    height: 50px;
-}
+
 
 .t_right {
     width: 100%;
@@ -75,13 +70,48 @@ header {
     z-index: 9999;
     width: 100%;
     background-color: var(--header-color);
+    height: 70px;
 }
 .container {
-    width: 100%;
-    padding: 10px;
+    max-width: 100%;
+    padding: 30px;
     justify-content: space-between;
     margin: auto;
     align-items: center; 
+}
+
+.header_sx {
+    display: flex;
+    max-width: 20%;
+}
+
+.image {
+    text-align: center;
+    max-width: 100%;
+}
+
+.burger {
+    font-size: 1.7rem;
+}
+
+.pc_build {
+    list-style-type: none;
+    display: none;
+    line-height: 50px;
+    
+}
+
+.pc_build a {
+    text-decoration: none;
+    color: white;
+    height: 100%;
+    padding: 10px;
+}
+
+.pc_build .btn {
+    color: black;
+    background-color: white;
+    border-radius: 15px;
 }
 
 .flex {
@@ -96,12 +126,44 @@ main {
     background-color: var(--utility-color);
     border-radius: 10px;
     margin-bottom: 10px;
+    padding: 15px;
+}
+
+.header_col {
+    color: var(--header-color);
+}
+
+.grey_col {
+    color: var(--grey-color);
+}
+
+.intestazione {
+    padding: 20px 0;
+}
+.paragrafo {
+    line-height: 2rem;
+    font-weight: bold;
+    margin-bottom: 2rem;
+}
+
+.utility_btn {
+    text-decoration: none;
+    color: white;
+    padding: 0.75rem 3rem;
+    background-color: var(--header-color);
+    border-radius: 15px;
+    margin-bottom: 2rem;
+}
+
+.img_utility {
+    max-width: 100%;
 }
 
 .options {
     width: 100%;
     background-color: var(--option-color);
 }
+
 .option_1 {
     width: 100%;
     padding: 10px;
@@ -189,7 +251,7 @@ footer {
         width: 100%;
     }
     .image {
-        width: 20%;
+        
     }
     .t_right {
         width: 80%;
@@ -230,6 +292,12 @@ footer {
 @media screen and (min-width: 992px) {
     .container {
         max-width: 970px;
+    }
+    .pc_build {
+        display: flex;
+    }
+    .burger {
+        display: none;
     }
     .utility:first-child {
         display: flex;
