--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ header {
 }
 .container {
     max-width: 100%;
-    padding: 30px;
+    padding: 0 30px;
     justify-content: space-between;
     margin: auto;
     align-items: center; 
@@ -152,11 +152,17 @@ main {
     padding: 0.75rem 3rem;
     background-color: var(--header-color);
     border-radius: 15px;
-    margin-bottom: 2rem;
 }
 
 .img_utility {
-    max-width: 100%;
+   width: 80%;
+   margin: 2rem auto 0;
+}
+
+.phone_image {
+    width: 100%;
+    position: relative;
+    bottom: -20px;
 }
 
 .options {
@@ -249,9 +255,6 @@ footer {
     .t_list {
         display: flex;
         width: 100%;
-    }
-    .image {
-        
     }
     .t_right {
         width: 80%;
