--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,19 @@ main {
     bottom: -20px;
 }
 
+.icon {
+    font-size: 5rem;
+}
+
+.utility h2 {
+    padding: 2rem 0;
+}
+
+.center {
+    text-align: center;
+    height: 100%;
+}
+
 .options {
     width: 100%;
     background-color: var(--option-color);
@@ -246,7 +259,7 @@ footer {
     .utility {
         width: calc(100% /3 - 1.5rem);
         justify-content: space-between;
-        margin-bottom: 0.75rem;
+        margin-bottom: 2rem;
     }
     .img_utility {
         width: 50%;
