--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,7 @@ header {
 
 
 
-.container {
-    height: 100%;
-}
+
 
 
 
@@ -74,6 +72,7 @@ header {
 }
 .container {
     max-width: 100%;
+    height: 100%;
     padding: 0 30px;
     justify-content: space-between;
     margin: auto;
@@ -125,7 +124,7 @@ main {
 .utility {
     background-color: var(--utility-color);
     border-radius: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 2rem;
     padding: 15px;
 }
 
@@ -145,6 +144,8 @@ main {
     font-weight: bold;
     margin-bottom: 2rem;
 }
+
+
 
 .utility_btn {
     text-decoration: none;
@@ -167,6 +168,7 @@ main {
 
 .icon {
     font-size: 5rem;
+    padding-top: 1rem;
 }
 
 .utility h2 {
@@ -175,7 +177,7 @@ main {
 
 .center {
     text-align: center;
-    height: 100%;
+    align-items: stretch;
 }
 
 .options {
