--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,7 @@ main {
 .option_1 {
     width: 100%;
     padding: 10px;
-    padding-bottom: 50px;
+    padding: 70px 0;
 }
 .piani {
     font-size: 2.5rem;
@@ -384,7 +384,14 @@ footer {
         max-width: 45%;
         margin-left: calc(5% / 2);
     }
+    .piani_1 {
+        margin-top: 8rem;
+    }
+    .piani_2 {
+        margin: 1rem 0;
+    }
     .option_2 {
+        align-self: flex-end;
         max-width: 45%;
         margin-right: calc(5% / 2);
     }
